[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/engine/joingame.gd" type="Script" id=1]

[node name="multiplayerJoin" type="MarginContainer"]
anchor_left = 0.229
anchor_top = 0.163
anchor_right = 0.809
anchor_bottom = 0.548
margin_left = -84.496
margin_top = 3.2
margin_right = -84.496
margin_bottom = 3.20001

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 593.0
margin_bottom = 231.0
window_title = "join a server"
resizable = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -214.0
margin_right = 214.0
margin_bottom = 69.0
text = "Don't get too used to this panel. It'll be reworked in the future.

so dark get to work buddy :^)"

[node name="joinButton" type="Button" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.628
anchor_right = 0.5
anchor_bottom = 0.655
margin_left = -23.0
margin_top = -16.5
margin_right = 23.0
margin_bottom = 16.5
text = "join!!!!"

[node name="ipInput" type="LineEdit" parent="WindowDialog"]
anchor_left = 0.156
anchor_top = 0.5
anchor_right = 0.89
anchor_bottom = 0.5
margin_top = -11.5
margin_bottom = 11.5
placeholder_text = "server ip"

[connection signal="pressed" from="WindowDialog/joinButton" to="WindowDialog" method="_on_joinButton_pressed"]
